<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:text="@string/setting_function"
        android:textColor="@color/setting_group_title_text_color"
        android:paddingLeft="@dimen/setting_keyline1"
        android:paddingRight="@dimen/setting_keyline1"
        android:paddingTop="@dimen/setting_item_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/show_icon"
        android:background="@drawable/setting_item_bg"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/setting_keyline1"
        android:paddingRight="@dimen/setting_keyline1"
        android:paddingTop="@dimen/setting_item_margin_vertical"
        android:paddingBottom="@dimen/setting_item_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/setting_show_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <CheckBox
            android:id="@+id/show_icon_toggle"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <include layout="@layout/setting_separate" />

    <LinearLayout
        android:id="@+id/auto_shot"
        android:background="@drawable/setting_item_bg"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/setting_keyline1"
        android:paddingRight="@dimen/setting_keyline1"
        android:paddingTop="@dimen/setting_item_margin_vertical"
        android:paddingBottom="@dimen/setting_item_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/setting_auto_shot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <CheckBox
            android:id="@+id/auto_shot_toggle"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <include layout="@layout/setting_separate" />


    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="@dimen/setting_keyline1"
        android:paddingRight="@dimen/setting_keyline1"
        android:paddingTop="@dimen/setting_item_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/setting_auto_screenshot_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/screenshot_interval_value"
            android:gravity="right"
            android:layout_width="@dimen/setting_icon_offset_value_width"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/screenshot_interval"
        android:max="2000"
        android:paddingLeft="@dimen/setting_keyline1"
        android:paddingRight="@dimen/setting_keyline1"
        android:paddingBottom="@dimen/setting_item_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>