<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:text="@string/setting_screenshot"
        android:textColor="@color/setting_group_title_text_color"
        android:paddingLeft="@dimen/setting_keyline1"
        android:paddingRight="@dimen/setting_keyline1"
        android:paddingTop="@dimen/setting_item_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="@dimen/setting_keyline1"
        android:paddingRight="@dimen/setting_keyline1"
        android:paddingTop="@dimen/setting_item_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/setting_screenshot_top_offset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/screenshot_top_offset_value"
            android:gravity="right"
            android:layout_width="@dimen/setting_icon_offset_value_width"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <SeekBar
        android:id="@+id/screenshot_top_offset"
        android:paddingLeft="@dimen/setting_keyline1"
        android:paddingRight="@dimen/setting_keyline1"
        android:paddingBottom="@dimen/setting_item_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <include layout="@layout/setting_separate"/>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="@dimen/setting_keyline1"
        android:paddingRight="@dimen/setting_keyline1"
        android:paddingTop="@dimen/setting_item_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/setting_screenshot_right_offset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/screenshot_right_offset_value"
            android:gravity="right"
            android:layout_width="@dimen/setting_icon_offset_value_width"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/screenshot_right_offset"
        android:max="150"
        android:paddingLeft="@dimen/setting_keyline1"
        android:paddingRight="@dimen/setting_keyline1"
        android:paddingBottom="@dimen/setting_item_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <include layout="@layout/setting_separate"/>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="@dimen/setting_keyline1"
        android:paddingRight="@dimen/setting_keyline1"
        android:paddingTop="@dimen/setting_item_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/setting_screenshot_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/screenshot_size_value"
            android:gravity="right"
            android:layout_width="@dimen/setting_icon_offset_value_width"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <SeekBar
        android:id="@+id/screenshot_size"
        android:max="70"
        android:paddingLeft="@dimen/setting_keyline1"
        android:paddingRight="@dimen/setting_keyline1"
        android:paddingBottom="@dimen/setting_item_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>